--- a/src/assets/styles/pages/main.scss
+++ b/src/assets/styles/pages/main.scss
@@ -11,9 +11,24 @@
       background-color: green;
     }
     .search_bar {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
       width: 100%;
       height: 50px;
-      background-color: yellowgreen;
+      background-color: black;
+      color: white;
+      .logo {
+        width: 100px;
+        > form {
+          display: flex;
+          flex-direction: row;
+        }
+      }
+      > input {
+        width: 300px;
+        height: 25px;
+      }
     }
     .menu_bar {
       width: 100%;
