--- a/src/assets/styles/pages/main.scss
+++ b/src/assets/styles/pages/main.scss
@@ -20,6 +20,8 @@
       color: white;
       .logo {
         width: 100px;
+        font-weight: bold;
+        font-size: 25px;
         > form {
           display: flex;
           flex-direction: row;
@@ -28,6 +30,10 @@
       > input {
         width: 300px;
         height: 25px;
+      }
+      .rank-items {
+        display: none;
+        transition: opacity 1s;
       }
     }
     .menu_bar {
